--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Rachel cm</h1>
-    <a href="/contact.html"></a>
+    <a href="/Rachel-Zhang/contact.html">Contact</a>
     <p>Hello, I'm Rachel</p>
     
 </body>
