--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Rachel cm</h1>
     <a href="/Rachel-Zhang/contact.html"></a>
-    <p>Hello, I'm Rachel</p>
+    <p>Hello, I'm Ruitong Zhang</p>
     
 </body>
 </html>
