--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rachel cm</h1>
+    <h1>Ruitong Zhang</h1>
     <a href="/Rachel-Zhang/contact.html"></a>
     <p>Hello, I'm Ruitong Zhang</p>
     
