--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruitong Zhang</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
 </head>
 <body>
+    <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fa-solid fa-a"></i>
+                    <div class="logo-text">Ruitong Zhang</div>
+                </div>
+                <nav>
+                    <div class="togglebtn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <u1 class="navlinks">
+                        <li><a href="#">Welcome!</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Let's Connect</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </u1>
+                </nav>
+            </header>
+        </div>
+    </div>
     <h1>Ruitong Zhang</h1>
     <a href="/Rachel-Zhang/contact.html"></a>
     <p>Hello, I'm Ruitong Zhang</p>
