--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <img src="images/main_photo.jpg" alt="profile pic">
                 </div>
                 <div class="rz-text">
-                    <h5>Hello, I'm <span class="">Ruitong Zhang</span>/h5>
+                    <h5>Hello, I'm <span class="">Ruitong Zhang</span></h5>
                     <h1>Computer Engineering Student @ University of Waterloo</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Incidunt vel dignissimos minus quod, odit similique aspernatur adipisci labore cupiditate, 
