--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </header>
             <div class="container">
                 <div class="rachel-pic">
-                    <img src="images/main_photo.jpg" alt="profile pic">
+                    <img src="img/main_photo.jpg" alt="profile pic">
                 </div>
                 <div class="rz-text">
                     <h5>Hello, I'm <span class="">Ruitong Zhang</span></h5>
