--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <header>
                 <div class="logo">
-                    <i class="fa-solid fa-a"></i>
+                    <i class="fa-solid fa-r"></i>
                     <div class="logo-text">Ruitong Zhang</div>
                 </div>
                 <nav>
