--- a/index.html
+++ b/index.html
@@ -36,22 +36,20 @@
                 </div>
                 <div class="rz-text">
                     <h5>Hello, I'm <span class="input">Ruitong Zhang</span></h5>
-                    <h1>Computer Engineering Student @ University of Waterloo</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Incidunt vel dignissimos minus quod, odit similique aspernatur adipisci labore cupiditate, 
-                        aperiam nulla quos culpa animi ipsam modi saepe quibusdam! Omnis, laudantium.
+                    <h1>Ruitong Zhang</h1>
+                    <h2>Computer Engineering Student @ University of Waterloo</h2>
+                    <p>3x hackathon wins, passionate for creating practical AI and ML solutions. Check out my projects!
                     </p>
                     <div class="btn-group">
-                        <a href="#" class="btn active">Download CV</a>
-                        <a href="#" class="btn">Contact</a>
+                        <a href="https://www.linkedin.com/in/rachelzhang24/" class="btn">Connect on LinkedIn!</a>
                     </div>
 
                     <div class="social">
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-devpost"></i></a>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/rachelzhang24/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://devpost.com/rachruby"><i class="fa-brands fa-devpost"></i></a>
+                        <a href="https://github.com/rachruby"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.youtube.com/@studiousruby"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/rchelarts/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
