--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                         <span></span>
                     </div>
                     <u1 class="navlinks">
-                        <li><a href="#">Welcome!</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Let's Connect</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </u1>
                 </nav>
             </header>
@@ -35,7 +33,7 @@
                     <img src="img/main_photo.jpg" alt="profile pic">
                 </div>
                 <div class="rz-text">
-                    <h5>Hello, I'm <span class="input">Ruitong Zhang</span></h5>
+                    <h5>Hello, I'm <span class="input">an AR Developer</span></h5>
                     <h1>Ruitong Zhang</h1>
                     <h2>Computer Engineering Student @ University of Waterloo</h2>
                     <p>3x hackathon wins, passionate for creating practical AI and ML solutions. Check out my projects!
@@ -45,7 +43,7 @@
                     </div>
 
                     <div class="social">
-                        <a href="https://www.linkedin.com/in/rachelzhang24/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="mailto:r544zhan@uwaterloo.ca"><i class="fa-brands fa-envelope">Send email</i></a>                       
                         <a href="https://devpost.com/rachruby"><i class="fa-brands fa-devpost"></i></a>
                         <a href="https://github.com/rachruby"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.youtube.com/@studiousruby"><i class="fa-brands fa-youtube"></i></a>
@@ -69,7 +67,7 @@
         })
 
         var typed=new Typed(".input", {
-            strings:["Frontend Developer", "UX Designer", "iOS App Developer"],
+            strings:["a Frontend Developer", "a UX Designer", "an iOS App Developer"],
             typedSpeed: 70,
             backSpeed: 55,
             loop:true
