--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h5>Hello, I'm <span class="input">an AR Developer</span></h5>
                     <h1>Ruitong Zhang</h1>
                     <h2>Computer Engineering Student @ University of Waterloo</h2>
-                    <p>3x hackathon wins, passionate for creating practical AI and ML solutions. Check out my projects!
+                    <p>3x hackathon winner, passionate for creating practical AI and ML solutions. Check out my projects!
                     </p>
                     <div class="btn-group">
                         <a href="https://www.linkedin.com/in/rachelzhang24/" class="btn">Connect on LinkedIn!</a>
