--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                     <div class="social">
                         <a href="mailto:r544zhan@uwaterloo.ca"><i class="fa-brands fa-envelope">Send email</i></a>                       
-                        <a href="https://devpost.com/rachruby"><i class="fa-brands fa-devpost"></i></a>
+                        <a href="https://devpost.com/rachruby"><i class="fa-brands fa-dev"></i></a>
                         <a href="https://github.com/rachruby"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.youtube.com/@studiousruby"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://www.instagram.com/rchelarts/"><i class="fa-brands fa-instagram"></i></a>
