--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="social">
-                        <a href="mailto:r544zhan@uwaterloo.ca"><i class="fa-brands fa-envelope"></i></a>                       
+                        <a href="mailto:r544zhan@uwaterloo.ca"><i class="fa-brands fa-envelope" aria-hidden="true"></i></a>                       
                         <a href="https://devpost.com/rachruby"><i class="fa-brands fa-dev"></i></a>
                         <a href="https://github.com/rachruby"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.youtube.com/@studiousruby"><i class="fa-brands fa-youtube"></i></a>
