--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header>
                 <div class="logo">
                     <i class="fa-solid fa-r"></i>
-                    <div class="logo-text">Ruitong Zhang</div>
+                    <div class="logo-text">RZ</div>
                 </div>
                 <nav>
                     <div class="togglebtn">
