--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,11 @@
     <title>Ruitong's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js" defer></script>
 </head>
 <body>
     <!-- Header and Navigation -->
-    <header class="hero-header">
+    <div class="hero-header">
         <div class="wrapper">
             <div class="logo">
                 <i class="fa-solid fa-r"></i>
@@ -28,7 +29,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </div>
 
     <!-- Main Content -->
     <main>
